--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,27 +3,18 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "express": "^4.19.2",
-    "http-proxy-middleware": "^2.0.6",
+    "@types/node": "^16.18.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "typescript": "^4.9.5",
-    "axios": "^1.6.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@types/node": "^16.18.0"
-  },
-  "devDependencies": {
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.5.2"
+    "web-vitals": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "serve": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -44,5 +35,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0"
   }
 }
